--- a/Problem Set 1.ipynb
+++ b/Problem Set 1.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 129,
    "id": "31d676ef-6e82-49fc-912e-39cac398957a",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
    "id": "5530709c-8d77-40cd-b564-07b7c064ada6",
    "metadata": {},
    "source": [
-    "For even numbers in rowlse"
+    "For even numbers in row"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "id": "e58433d0-5f46-46f5-baf0-5307e40fc672",
    "metadata": {},
    "source": [
-    "For odd numbers in row). "
+    "For odd numbers in row "
    ]
   },
   {
